--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,165 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.min-color{
+    background-color:  #E58411;
+    
+
+}
+.mine-color{
+    color:#E58411;
+}
+.imgo{
+    height: 300px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+    @apply bg-white text-black dark:bg-gray-900 dark:text-white;
+    position: relative;
+    overflow-x: hidden;
+ 
+}
+
+.le{
+    /* Group 48095411 */
+
+position: absolute;
+width: 637.56px;
+height: 586.74px;
+left: 0.23px;
+top: 600px;
+
+transform: rotate(0.32deg);
+
+}
+
+.ri{
+    /* Group 48095442 */
+
+position: absolute;
+width: 500.31px;
+height: 400.03px;
+
+
+
+left: 1500px;
+top: 300px;
+
+transform: rotate(0.32deg);
+
+}
+
+.lii{
+    /* Group 48095442 */
+
+position: absolute;
+width: 596.31px;
+height: 531.03px;
+left: 4008.11px;
+top: 1693.33px;
+
+transform: rotate(56.32deg);
+
+
+}
+
+.noga{
+    /* Group 48095442 */
+
+position: absolute;
+width: 596.31px;
+height: 531.03px;
+/* left: 2108.11px; */
+right: -400px;
+top: 100px;
+
+transform: rotate(5.32deg);
+
+}
+.si{
+    /* Group 48095411 */
+
+position: absolute;
+width: 637.56px;
+height: 586.74px;
+left: -60.23px;
+top: 664px;
+
+transform: rotate(20.32deg);
+
+}
+
+.rig{
+    /* Group 48095442 */
+
+position: absolute;
+width: 596.31px;
+height: 531.03px;
+left: 1400.11px;
+top: 356px;
+
+transform: rotate(5.32deg);
+
+}
+
+.ship{
+    /* Union */
+
+position: absolute;
+width: 334px;
+height: 150px;
+left: 20px;
+bottom: 30px;
+z-index: 1;
+
+
+background: rgba(255, 255, 255, 0.3);
+backdrop-filter: blur(2px);
+/* Note: backdrop-filter has minimal browser support */
+
+}
+
+.ring{
+    /* Ellipse 1131 */
+
+position: absolute;
+width: 66px;
+height: 66px;
+left: 160px;
+top: 135px;
+z-index: 0;
+
+background: #FFFFFF;
+
+}
+
+
+.rect1{
+    /* Rectangle 1445 */
+
+position: absolute;
+width: 495px;
+height: 422px;
+left: 0px;
+top: 0px;
+
+background: #F7F7F7;
+border-radius: 20px;
+
+}
+
+.rec2{
+    /* Rectangle 1448 */
+
+position: absolute;
+width: 495px;
+height: 301px;
+left: 200px;
+top: 150px;
+
+background: #F7F7F7;
+border-radius: 20px;
+
 }
